# mapper-influence

./: .dockerignore  .env.example  .gitignore  .prettierrc  Cargo.toml  Dockerfile  Dockerfile.grafana_agent  Dockerfile.railway  Makefile  README.md  deny.toml  docker-compose.yml  grafana-agent-config.yaml  justfile  nixpacks.toml  sqlx-data.json
.github/: dependabot.yml
.github/workflows/: frontend_ci.yml  rust_ci.yml
mi-api/: Cargo.toml
mi-api/src/: api_docs.rs  future_log_ext.rs  lib.rs  main.rs  request_id.rs  result.rs  traces.rs
mi-api/src/api/: auth.rs  html.rs  influence.rs  leaderboard.rs  mod.rs  redoc.rs  user.rs
mi-api/src/state/: http.rs  mod.rs  postgres.rs  redis.rs
mi-core/: Cargo.toml  build.rs
mi-core/src/: error.rs  lib.rs  try_deserialize.rs
mi-db/: Cargo.toml  build.rs  sqlx-data.json
mi-db/migrations/: 20221105144204_create_user.down.sql  20221105144204_create_user.up.sql  20230311122951_init_db.down.sql  20230311122951_init_db.up.sql  20230319070340_add_user_maps.down.sql  20230319070340_add_user_maps.up.sql
mi-db/src/: auth.rs  error.rs  influence.rs  leaderboard.rs  lib.rs  user.rs  user_lock.rs
mi-osu-api/: Cargo.toml
mi-osu-api/src/: api_error.rs  auth.rs  authentication.rs  beatmap.rs  beatmaps.rs  lib.rs  search.rs  user.rs  users.rs
mi-ui/: LICENSE  astro.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.tsbuildinfo
mi-ui/src/components/General/: Tooltip.astro
mi-ui/src/components/Layout/: index.tsx  style.module.scss
mi-ui/src/components/Layout/Header/: index.tsx
mi-ui/src/components/Layout/Header/DarkModeToggle/: index.tsx
mi-ui/src/components/Layout/Header/SearchBar/: index.tsx  styles.module.scss
mi-ui/src/components/Layout/Header/SearchBar/Results/: index.tsx  style.module.scss
mi-ui/src/components/LoginPage/: LoginCards.astro  LoginCards.scss
mi-ui/src/components/PageComponents/Home/LoginScreen/: index.tsx  style.module.scss
mi-ui/src/components/PageComponents/Home/NewsScreen/: index.tsx
mi-ui/src/components/PageComponents/Home/Shared/Leaderboard/: index.tsx  style.module.scss
mi-ui/src/components/PageComponents/Home/TutorialScreen/: index.tsx  style.module.scss
mi-ui/src/components/PageComponents/ProfilePage/: index.tsx  style.module.scss
mi-ui/src/components/PageComponents/ProfilePage/EditableDescription/: index.tsx  style.module.scss
mi-ui/src/components/PageComponents/ProfilePage/InfluenceList/: InfluenceElement.tsx  index.tsx  style.module.scss
mi-ui/src/components/PageComponents/ProfilePage/InfluenceList/InfluenceType/: index.tsx  style.module.scss
mi-ui/src/components/PageComponents/ProfilePage/MapperDetails/: index.tsx
mi-ui/src/components/PageComponents/ProfilePage/MapperDetails/AddUserButton/: index.tsx  style.module.scss
mi-ui/src/components/PageComponents/ProfilePage/MapperDetails/MapStats/: index.tsx  style.module.scss
mi-ui/src/components/PageComponents/ProfilePage/MapperDetails/ProfileInfo/: index.tsx  style.module.scss
mi-ui/src/components/PageComponents/ProfilePage/MentionList/: index.tsx  style.module.scss
mi-ui/src/components/React/BaseProfileCard/: Badge.tsx  index.tsx  style.module.scss
mi-ui/src/components/React/DarkMode/: Beams.tsx  ThemeToggle.tsx  style.module.scss
mi-ui/src/components/React/DashboardPage/NewsScreen/: index.tsx  style.module.scss
mi-ui/src/components/React/DashboardPage/Shared/ContributeButtons/: index.tsx  style.module.scss
mi-ui/src/components/React/DashboardPage/Shared/Leaderboard/: index.tsx  style.module.scss
mi-ui/src/components/React/DashboardPage/TutorialScreen/: index.tsx  style.module.scss
mi-ui/src/components/React/Header/: index.tsx  style.module.scss
mi-ui/src/components/React/Header/SearchBar/: index.tsx  styles.module.scss
mi-ui/src/components/React/MapCard/: index.tsx  style.module.scss
mi-ui/src/components/React/MapCarousel/SingleItem/: index.tsx  style.module.scss
mi-ui/src/components/React/MapCarousel/Slider/: index.tsx  style.module.scss
mi-ui/src/components/React/Modal/: style.module.scss
mi-ui/src/components/React/ProfilePage/: index.tsx  style.module.scss
mi-ui/src/components/React/ProfilePage/EditableDescription/: index.tsx  style.module.scss
mi-ui/src/components/React/ProfilePage/InfluenceList/: InfluenceElement.tsx  index.tsx  style.module.scss
mi-ui/src/components/React/ProfilePage/MapperDetails/: index.tsx  style.module.scss
mi-ui/src/components/React/ProfilePage/MentionList/: index.tsx  style.module.scss
mi-ui/src/components/React/ProfilePhoto/: index.tsx
mi-ui/src/components/React/Tooltip/: index.tsx  style.module.scss
mi-ui/src/components/SharedComponents/BaseProfileCard/: Badge.tsx  index.tsx  style.module.scss
mi-ui/src/components/SharedComponents/ContributeButtons/: index.tsx  style.module.scss
mi-ui/src/components/SharedComponents/MapCard/: index.tsx
mi-ui/src/components/SharedComponents/MapCarousel/SingleItem/: index.tsx  style.module.scss
mi-ui/src/components/SharedComponents/MapCarousel/Slider/: index.tsx
mi-ui/src/components/SharedComponents/ProfilePhoto/: index.tsx  style.module.scss
mi-ui/src/components/SharedComponents/Tooltip/: index.tsx
mi-ui/src/hooks/: useFetchService.ts  useMatchesWindowSize.ts  useUser.ts  user.ts
mi-ui/src/layouts/: Layout.astro
mi-ui/src/libs/consts/: dummyUserData.ts
mi-ui/src/libs/functions/: index.ts
mi-ui/src/libs/types/: influence.ts  user.d.ts
mi-ui/src/pages/: _app.tsx  dashboard.astro  dashboard.tsx  index.astro  index.tsx  login.tsx
mi-ui/src/pages/profile/: [mapperId].tsx  index.tsx
mi-ui/src/services/: influence.ts  user.ts  userBase.ts
mi-ui/src/states/: theme.ts  user.ts
mi-ui/src/styles/: extendables.scss  globals.scss  variables.scss
mi-ui/src/styles/extendables/: index.scss
mi-ui/src/styles/variables/: colors.scss  sizes.scss  toggledVariables.scss
migrations/: 20230506101108_error_table.down.sql  20230506101108_error_table.up.sql  20230522083840_add_timestamps.down.sql  20230522083840_add_timestamps.up.sql
(+14 files in other folders)
