[workspace]
members = ["mi-api", "mi-db", "mi-osu-api", "mi-core"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["macros", "http2"] }
axum-auth = "0.4.0"
axum-macros = "0.3.7"
bb8 = "0.8.1"
bb8-redis = "0.13.1"
chrono = { version = "0.4.24", default-features = false, features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.28"
hyper = { version = "0.14.26", features = ["full"] }
jwt = "0.16.0"
once_cell = "1.18.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0", features = [
    "reqwest-rustls",
    "http-proto",
    "reqwest-client",
] }
parking_lot = "0.12.1"
pin-project-lite = "0.2"
rand_chacha = "0.3.1"
redis = { version = "0.23.0", features = ["tokio-comp"] }
reqwest = { version = "0.11.18", features = ["json"] }
secrecy = { version = "0.8.0" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.106"
sqlx = { version = "0.6.3", features = [
    "default",
    "runtime-tokio-rustls",
    "postgres",
] }
thiserror = "1.0.40"
tokio = { version = "1.29.1", features = ["macros"] }
tower = "0.4.13"
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
utoipa = { version = "3.3.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
validator = { version = "0.16.0", features = ["derive"] }

mi-db = { version = "0.0.0", path = "./mi-db" }
mi-osu-api = { version = "0.0.0", path = "./mi-osu-api" }
mi-core = { version = "0.0.0", path = "./mi-core" }
