[package]
name = "mi-api"
version = "0.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = { version = "0.6.16", features = ["macros", "http2"] }
axum-auth = "0.4.0"
axum-macros = "0.3.7"
chrono = "0.4.24"
rand_chacha = "0.3.1"
dotenvy = "0.15.7"
hyper = { version = "0.14.26", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-opentelemetry = "0.18.0"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
once_cell = "1.17.1"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.12.0"
pin-project-lite = "0.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = [
    "default",
    "runtime-tokio-rustls",
    "postgres",
] }
reqwest = "0.11.16"
tower-cookies = "0.9.0"
utoipa = { version = "3.3.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }
mi-db = { path = "../mi-db", version = "0.0.0" }
mi-osu-api = { path = "../mi-osu-api", version = "0.0.0" }
parking_lot = "0.12.1"
validator = { version = "0.16.0", features = ["derive"] }

bb8 = "0.8.0"
bb8-redis = "0.13.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }
