[package]
name = "mi-api"
version.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mi-db = { path = "../mi-db", version = "0.0.0" }
mi-osu-api = { path = "../mi-osu-api", version = "0.0.0" }

sqlx.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-auth.workspace = true
axum-macros.workspace = true
chrono.workspace = true
rand_chacha.workspace = true
dotenvy.workspace = true
hyper.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
once_cell.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
pin-project-lite.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tower-cookies.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
parking_lot.workspace = true
validator.workspace = true
bb8.workspace = true
bb8-redis.workspace = true
redis.workspace = true
