[package]
name = "mi-api"
version = "0.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
axum-auth = { workspace = true }
axum-macros = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
hyper = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
parking_lot = { workspace = true }
rand_chacha = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-cookies = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
validator = { workspace = true }

mi-db = { workspace = true }
mi-osu-api = { workspace = true }
mi-core = { workspace = true }
