[package]
name = "mi-core"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
pin-project-lite = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }

[build-dependencies]
dotenvy = { workspace = true }
sqlx = { workspace = true, features = ["offline"] }
tokio = { workspace = true }
