[package]
name = "mi-db"
version = "0.0.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8 = "0.8.0"
bb8-redis = "0.13.0"
chrono = { version = "0.4.24", features = ["serde"] }
futures = "0.3.28"
redis = { version = "0.23.0", features = ["tokio-comp"] }
sqlx = { version = "0.6.3", features = [
    "default",
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "chrono"
] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"
tokio = { version = "1.27.0", features = ["macros"] }
utoipa = { version = "3.3.0", features = ["axum_extras"] }
mi-osu-api = { path = "../mi-osu-api", version = "0.0.0" }

[build-dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.6.3", features = [
    "default",
    "runtime-tokio-rustls",
    "postgres",
    "offline",
] }

tokio = { version = "1.27.0", features = ["macros"] }

[dev-dependencies]
futures = "0.3.28"
once_cell = "1.17.1"
tokio = { version = "1.27.0", features = ["macros"] }

[features]
db-tests = []
