[package]
name = "mi-db"
version.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mi-osu-api = { path = "../mi-osu-api", version = "0.0.0" }

bb8.workspace = true
bb8-redis.workspace = true
chrono.workspace = true
futures.workspace = true
redis.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
utoipa.workspace = true

[build-dependencies]
sqlx.workspace = true
dotenvy.workspace = true
tokio.workspace = true

[dev-dependencies]
futures.workspace = true
once_cell.workspace = true
tokio.workspace = true

[features]
db-tests = []
