[package]
name = "mi-db"
version = "0.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = true, features = ["json", "chrono"] }

bb8 = { workspace = true }
bb8-redis = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }

mi-osu-api = { workspace = true }
mi-core = { workspace = true }

[build-dependencies]
dotenvy = { workspace = true }
sqlx = { workspace = true, features = ["offline"] }
tokio = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }

[features]
db-tests = []
